fix visibility bug in extension page

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -206,7 +206,7 @@ p {
 .import-secondary {
   background-color: inherit;
   border:1px solid #00b39f;
-  color: white;
+  color: var(--button-text-color);
   border-radius: 4px;
   cursor: pointer;
   padding: 10px;
@@ -292,7 +292,7 @@ p {
     color: var(--color-primary-dark);
   }
   .chip.CONFIGURATION {
-    background-color: var(--action-color-light);
+    background-color: var(--brand-color-primary);
     box-shadow: 0px 1px 2px var(--action-color-light);
     color: var(--color-primary-dark);
   }
